<resources>
    <string name="app_name">Mobile App</string>

    <!-- Login Strings -->
    <string name="login_title">Welcome!</string>
    <string name="login_username">User: admin</string>
    <string name="login_password">Password: 123</string>
    <string name="login_buttontext">Login</string>
    <string name="login_invalidpassword">Invalid Password</string>
    <string name="login_invalidlogin">Invalid Username</string>
    <string name="home_loggedText">Você está logado.</string>
    <string name="home_voltar">Voltar a Tela Anterior</string>
    <string name="home_lerPoema">Mostrar um Poema</string>
    <string name="poema_botaoHome">Tela Inicial</string>
    <string name="crashButton">Crashar Aplicativo</string>
    <string name="textoPoema">Não vou te mostrar um poema.
        \nAo invés disto, vou te mostrar uma lista de compras.</string>
    <string name="texto_listaCompras">Lista de Itens na Lista de Compras</string>
    <string name="texto_botaoExpandirItem">Descrição</string>

    <string name="nome_do_item">Nome do Item</string>
    <string name="expandir_descricao">Expandir Descrição</string>
    <string name="descricao_do_item">Descrição do Item</string>

</resources>